# tgbot-python-V2

./: .gitignore  README.md  credentials.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt
modules/: ai_spam_detection.py  archive.py  blocker.py  command_source.py  core.py  fastpurge.py  group_util.py  help.py  komaru.py  log.py  menu_ds.py  misc.py  openai.py  rm6785.py  rm6785_file.py  toys.py  updater.py
scripts/: add_license.py  pre_commit_hook.py
tgbot_python_v2/: __init__.py  __main__.py  main.py
tgbot_python_v2/modules/: README.md  ai_spam_detection.py  archive.py  blocker.py  command_source.py  core.py  fastpurge.py  group_util.py  help.py  igcse.py  komaru.py  log.py  menu_ds.py  misc.py  openai.py  rm6785.py  rm6785_file.py  toys.py  updater.py  x.py
tgbot_python_v2/util/: config.py  help.py  logging.py  module.py
util/: config.py  config_backuprestore.py  help.py  logging.py  module.py
